--- a/iTrashAPI/iTrashAPI/packages.config
+++ b/iTrashAPI/iTrashAPI/packages.config
@@ -5,6 +5,61 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="6.0.0-preview.4.21253.5" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Metadata" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.ApiExplorer" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.5" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.StaticFiles" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="5.0.0-preview.5.20278.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.ApiDescription.Server" version="6.0.0-preview.5.21301.17" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Embedded" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Localization" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Localization.Abstractions" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.ObjectPool" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.WebEncoders" version="6.0.0-preview.5.21301.17" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net472" />
+  <package id="Microsoft.OpenApi" version="1.3.0-preview" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Swashbuckle.AspNetCore" version="6.1.4" targetFramework="net472" />
+  <package id="Swashbuckle.AspNetCore.Swagger" version="6.1.4" targetFramework="net472" />
+  <package id="Swashbuckle.AspNetCore.SwaggerGen" version="6.1.4" targetFramework="net472" />
+  <package id="Swashbuckle.AspNetCore.SwaggerUI" version="6.1.4" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="6.0.0-preview.4.21253.7" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
